<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">天天炫斗宝典</string>
    <string name="app_id">ttxd</string>
    <string name="app_copyright">Copyright © 2005 - %1$s Tencent. All Rights Reserved. \n腾讯公司  版权所有</string>
    <string name="app_datahost">http://ttxd.qq.com</string>
    <string name="app_package">com.tencent.game.VXDGame</string>

    <integer name="home_slider_interval">6</integer>
    <integer name="splash_duration">3000</integer>

    <string name="main_menu_login">用户登录</string>
    <string name="main_menu_logout">注销登录</string>
    <string name="main_menu_myinfo">我的资料</string>
    <string name="main_menu_software">推荐游戏</string>
    <string name="main_menu_search">搜索</string>
    <string name="main_menu_sweep">扫一扫</string>
    <string name="main_menu_picshow">显示图片</string>
    <string name="main_menu_picnoshow">隐藏图片</string>
    <string name="main_menu_cache">清除缓存</string>
    <string name="main_menu_email">意见反馈</string>
    <string name="main_menu_about">关于我们</string>
    <string name="main_menu_setting">系统设置</string>
    <string name="main_menu_exit">退出程序</string>
    <string name="main_menu_home">首页</string>
    <string name="main_menu_manual">攻略</string>
    <string name="main_menu_community">社区</string>
    <string name="main_menu_appbox">百宝箱</string>
    <string name="main_menu_icenter">个人中心</string>
    <string name="frame_title_news_all">全部</string>
    <string name="frame_title_news_news">新闻</string>
    <string name="frame_title_news_video">视频</string>
    <string name="frame_title_news_event">活动</string>
    <string name="frame_title_question_ask">问答</string>
    <string name="frame_title_question_share">分享</string>
    <string name="frame_title_question_other">综合</string>
    <string name="frame_title_question_job">角色</string>
    <string name="frame_title_question_site">官网</string>
    <string name="frame_title_tweet_lastest">最新微博</string>
    <string name="frame_title_tweet_hot">热门微博</string>
    <string name="frame_title_tweet_my">我的微博</string>
    <string name="frame_title_tweet_send">发个微博</string>
    <string name="frame_title_active_lastest">最新动态</string>
    <string name="frame_title_active_atme">我</string>
    <string name="frame_title_active_comment">评论</string>
    <string name="frame_title_active_myself">我自己</string>
    <string name="frame_title_active_message">留言</string>
    <string name="community_url">http://bbs.g.qq.com/forum.php?mod=forumdisplay&amp;fid=12388</string>
    <string name="feedback_email_url">levinhuang@tencent.com</string>
    <string name="feedback_email_title">用户反馈-Android客户端</string>
    <string name="footbar_refresh">刷新</string>
    <string name="footbar_comment">评论</string>
    <string name="footbar_share">分享</string>
    <string name="footbar_favorite">收藏</string>
    <string name="footbar_more">更多</string>
    <string name="login_dialog_logo">@string/app_name</string>
    <string name="login_dialog_account">账号:</string>
    <string name="login_dialog_account_hint">请输入QQ号</string>
    <string name="login_dialog_password">密码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_reg">注册帐号</string>
    <string name="login_dialog_login">登  录</string>
    <string name="login_dialog_logoff">退出登录</string>
    <string name="login_dialog_login_qq">QQ快速登录</string>
    <string name="login_dialog_login_wx">微信快速登录</string>
    <string name="login_dialog_rememberPW">记住密码:</string>
    <string name="login_dialog_autoLogin">自动登录:</string>
    <string name="login_dialog_rememberMe">记住我的登录信息</string>
    <string name="login_requiretip">您好，请登入</string>
    <string name="news_detail_head_title">新闻正文</string>
    <string name="news_detail_lable_pub">发布于</string>
    <string name="question_detail_head_title">帖子正文</string>
    <string name="question_pub_head_title">我要发帖</string>
    <string name="blog_detail_head_title">攻略正文</string>
    <string name="software_detail_head_title">游戏详情</string>
    <string name="tweet_detail_head_title">微博详情</string>
    <string name="tweet_pub_head_title">发个微博</string>
    <string name="tweet_chatfooter_cancel_rcd">手指上滑，取消发送</string>
    <string name="tweet_chatfooter_cancel_rcd_release">松开手指，取消发送</string>
    <string name="tweet_chatfooter_too_short">录音时间太短</string>
    <string name="message_detail_head_title">我和%s的对话</string>
    <string name="user_center_head_title">用户空间</string>
    <string name="user_friend_head_title">我的好友</string>
    <string name="user_friend_follower">关注(%d)</string>
    <string name="user_friend_fans">粉丝(%d)</string>

    <integer name="userfav_swipelistview_offsetleft">65</integer>
    <integer name="channelfav_max">4</integer>
    <string name="channelfav_name">猜你喜欢</string>

    <string name="comment_list_head_title">玩家评论</string>
    <string name="comment_listitem_type">发布于</string>
    <string name="comment_pub_head_title">评论回复</string>
    <string name="comment_pub_content_hint">输入评论</string>
    <string name="comment_reply_title">---共有 %d 条评论---</string>
    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="ui_insert_image">插入图片</string>
    <string name="setting_head_title">设置</string>
    <string name="com_txt_search">搜索</string>
    <string name="com_txt_about">关于</string>
    <string name="com_txt_loading">加载中...</string>
    <string name="capture_head_title">扫一扫</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="lbl_ok">确认</string>
    <string name="lbl_scan_qrcode">扫描二维码</string>

    <!--S 广播事件名-->
    <string name="receiver_widgetupdate">com.tencent.sgz.action.APPWIDGET_UPDATE</string>
    <string name="receiver_tweetpub">com.tencent.sgz.action.APP_TWEETPUB</string>
    <string name="receiver_eventnotice">com.tencent.sgz.action.APP_EVENTNOTICE</string>
    <!--E 广播事件名-->

    <integer name="offsetTop_scan_qrcode">-30</integer>
    <integer name="wtlogin_appid">563046901</integer>

    <string name="wtlogin_errtip_requireuid">请输入登录账号！</string>
    <string name="wtlogin_errtip_requirepwd">请输入登录密码！</string>
    <string name="wtlogin_errtip_param">输入参数有误，请检查！</string>
    <string name="wtlogin_errtip_quicklogin_version">4.6以上版本手Q才能支持快速登录</string>
    <string name="wtlogin_errtip_requirevcode">请输入验证码</string>
    <string name="wtlogin_errtip_vcode">验证码有误，请重新输入！</string>
    <string name="wtlogin_verifycode">验证码</string>
    <string name="wtlogin_verifycode_next">看不清，换一个</string>
    <string name="wtlogin_deviceprotect">登录设备保护</string>
    <string name="wtlogin_deviceprotect_notice">你已开启“登录设备保护”，当前设备需求通过密保手机短信验证才能登录。</string>
    <string name="wtlogin_deviceprotect_phone">密保手机号码:  </string>
    <string name="wtlogin_beginverify">开始验证</string>
    <string name="wtlogin_devlock_smsverify">手机短信验证</string>
    <string name="wtlogin_verifycode_getitagain">重新获取</string>
    <string name="wtlogin_loginok">登录成功</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="wx_appid">wx0c8234f17641d550</string>
    <string name="wx_appsecret">6594dba26bb20c26925f91ef92f2396b</string>
    <string name="openqq_appid">1101693014</string><!--http://op.open.qq.com/index.php?mod=appinfo&act=main&appid=1101693014#mobile|advancedAbilityAndroid -->
    <string name="openqq_appkey">FSkWgCrBhHc2sKmn</string>
    <string name="openqq_default_pic">http://ossweb-img.qq.com/images/chanpin/ttxd/public/a20140528ttxd/downloadqrttxd.jpg</string>

    <!--S 详情页-->
    <integer name="reminder_ahead_day">3</integer>
    <!--E 详情页-->

</resources>
