<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
	<LinearLayout 
		android:layout_width="fill_parent" 
		android:layout_height="35.0dip"
		android:orientation="horizontal" 
		android:background="@color/teal"
		android:gravity="center_vertical"
        android:visibility="gone">
     	<Button 
     		android:id="@+id/frame_btn_question_ask"
     		style="@style/frame_button"
         	android:text="@string/frame_title_question_ask"/>
     	<ImageView
     	    style="@style/frame_button_cutline"
     	    android:background="@drawable/frame_button_cutline" />
        <Button 
           	android:id="@+id/frame_btn_question_share"
     		style="@style/frame_button"
         	android:text="@string/frame_title_question_share"/>
        <ImageView
     	    style="@style/frame_button_cutline"
     	    android:background="@drawable/frame_button_cutline" />
     	<Button 
     		android:id="@+id/frame_btn_question_other"
     		style="@style/frame_button" 
         	android:text="@string/frame_title_question_other"/>
     	<ImageView
     	    style="@style/frame_button_cutline"
     	    android:background="@drawable/frame_button_cutline" />
     	<Button 
     		android:id="@+id/frame_btn_question_job"
     		style="@style/frame_button"
         	android:text="@string/frame_title_question_job"/>
     	<ImageView
     	    style="@style/frame_button_cutline"
     	    android:background="@drawable/frame_button_cutline" />
     	<Button 
     		android:id="@+id/frame_btn_question_site"
     		style="@style/frame_button"
         	android:text="@string/frame_title_question_site"/>
    </LinearLayout>
    
	<com.tencent.sgz.widget.PullToRefreshListView
	  	android:id="@+id/frame_listview_question"
	    style="@style/widget_listview"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/p2"
            android:scaleType="fitStart"/>
    </ScrollView>
	
</LinearLayout>