<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:orientation="vertical" 
   	android:layout_width="fill_parent" 
   	android:layout_height="fill_parent">
   	<LinearLayout 
		android:layout_width="fill_parent" 
   		android:layout_height="35.0dip" 
   		android:orientation="horizontal"
   		android:background="@color/teal"  
   		android:gravity="center_vertical"
        android:visibility="gone">
       	<Button 
	        android:id="@+id/frame_btn_active_lastest"
			style="@style/frame_button"
         	android:text="@string/frame_title_active_lastest"/>
       	<ImageView
            style="@style/frame_button_cutline"
            android:background="@drawable/frame_button_cutline" />
		<Button 
			android:id="@+id/frame_btn_active_atme"
			style="@style/frame_button"
         	android:text="@string/frame_title_active_atme"/>
		<ImageView
            style="@style/frame_button_cutline"
            android:background="@drawable/frame_button_cutline" />
		<Button 
			android:id="@+id/frame_btn_active_comment"
			style="@style/frame_button"
         	android:text="@string/frame_title_active_comment"/>
		<ImageView
            style="@style/frame_button_cutline"
            android:background="@drawable/frame_button_cutline" />
		<Button 
			android:id="@+id/frame_btn_active_myself"
			style="@style/frame_button"
         	android:text="@string/frame_title_active_myself"/>
		<ImageView
            style="@style/frame_button_cutline"
            android:background="@drawable/frame_button_cutline" />
		<Button 
			android:id="@+id/frame_btn_active_message"
			style="@style/frame_button"
         	android:text="@string/frame_title_active_message"/>
	</LinearLayout>
	
	<com.tencent.sgz.widget.PullToRefreshListView
	  	android:id="@+id/frame_listview_active"
	    style="@style/widget_listview"
        android:visibility="gone"/>
	
	<com.tencent.sgz.widget.PullToRefreshListView
	  	android:id="@+id/frame_listview_message"
	    style="@style/widget_listview"
	    android:divider="@null"
		android:visibility="gone"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/p4"
            android:scaleType="fitStart"/>
    </ScrollView>
</LinearLayout>