<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/page_bg"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingTop="@dimen/space_3"
        android:paddingBottom="@dimen/space_3"
        android:background="@color/dark_gray">
        <TextView
            style="@style/detail_head_title"
            android:text="@string/wtlogin_deviceprotect"/>
        <ImageView
            android:id="@+id/wt_login_btnclose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:clickable="true"
            android:background="@drawable/icon_arrow_left"
            android:onClick="back"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/space_10"
        android:paddingRight="@dimen/space_10"
        android:paddingTop="@dimen/space_15"
        android:paddingBottom="@dimen/space_15"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textview1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/wtlogin_deviceprotect_notice"
            android:layout_marginBottom="@dimen/space_15"
            android:textColor="@color/gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dip"
            android:paddingTop="15dip"
            android:paddingLeft="@dimen/space_10"
            android:paddingRight="@dimen/space_10"
            android:layout_marginBottom="@dimen/space_15"
            android:background="@drawable/layer_login_border">

            <TextView
                android:id="@+id/textview2"
                android:layout_width="wrap_content"
                android:layout_height="20dip"
                android:layout_weight="0.5"
                android:text="@string/wtlogin_deviceprotect_phone"
                android:textColor="@color/gray" />

            <TextView
                android:id="@+id/wtlogin_mbMobile"
                android:layout_width="wrap_content"
                android:layout_height="20dip"
                android:layout_weight="0.5"
                android:text="137****0791"
                android:textColor="@color/gray"  />
        </LinearLayout>

        <Button
            android:id="@+id/wtlogin_startVerify"
            style="@style/btn_text"
            android:background="@drawable/selector_btn_blue"
            android:text="@string/wtlogin_beginverify"/>

    </LinearLayout>



</LinearLayout>