<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wt_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/page_bg">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingTop="@dimen/space_3"
        android:paddingBottom="@dimen/space_3"
        android:background="@color/dark_gray">
        <TextView
            style="@style/detail_head_title"
            android:text="@string/login_dialog_login"/>
        <ImageView
            android:id="@+id/wt_login_btnclose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:clickable="true"
            android:background="@drawable/icon_arrow_left"
            android:onClick="back"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/wt_login_inner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/space_15"
        android:paddingTop="@dimen/space_15"
        android:paddingLeft="@dimen/space_10"
        android:paddingRight="@dimen/space_10">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="100dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginBottom="@dimen/space_10"
            android:src="@drawable/tgclogo"
            android:layout_gravity="center_horizontal"
            />

        <ScrollView
            android:id="@+id/wt_login_sv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_10"
            android:scrollbars="none" >
            <ViewSwitcher
                android:id="@+id/wt_login_vs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/layer_login_border"
                    android:paddingBottom="15dip"
                    android:paddingTop="15dip"
                    >

                    <TableLayout
                        android:orientation="vertical"
                        android:id="@+id/wt_login_user_table"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/wt_login_uly"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/space_10"
                            android:paddingRight="@dimen/space_10">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_size_18"
                                android:textStyle="bold"
                                android:textColor="#ff000000"
                                android:text="@string/login_dialog_account" />
                            <AutoCompleteTextView
                                android:id="@+id/wt_login_account"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8.0dip"
                                android:layout_marginRight="8.0dip"
                                android:background="@null"
                                android:hint="@string/login_dialog_account_hint"
                                android:textSize="@dimen/text_size_18"
                                android:textColorHint="@color/gray_level4"
                                android:textColor="#ff000000"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:selectAllOnFocus="true"
                                android:inputType="textEmailAddress" />
                        </LinearLayout>
                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="15.0dip"
                            android:layout_marginLeft="1.0dip"
                            android:layout_marginRight="1.0dip"
                            android:layout_marginBottom="@dimen/space_15"
                            android:scaleType="fitXY"
                            android:background="@color/gray_level4"/>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/space_10"
                            android:paddingRight="@dimen/space_10">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/text_size_18"
                                android:textStyle="bold"
                                android:textColor="#ff000000"
                                android:text="@string/login_dialog_password" />
                            <EditText
                                android:id="@+id/wt_login_password"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8.0dip"
                                android:layout_marginRight="8.0dip"
                                android:textSize="@dimen/text_size_18"
                                android:background="@null"
                                android:textColorHint="@color/gray_level4"
                                android:textColor="#ff000000"
                                android:hint="@string/login_dialog_password_hint"
                                android:maxLines="1"
                                android:password="true"
                                android:singleLine="true"
                                android:selectAllOnFocus="true" />
                        </LinearLayout>
                    </TableLayout>

                </RelativeLayout>
                <View
                    android:id="@+id/wt_login_loading"
                    android:layout_width="135.0dip"
                    android:layout_height="135.0dip"
                    android:layout_gravity="center"
                    android:background="@anim/login_loading"/>
            </ViewSwitcher>
        </ScrollView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/wt_login_btn_login"
                style="@style/btn_text"
                android:background="@drawable/selector_btn_gray"
                android:text="@string/login_dialog_login"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:layout_marginBottom="@dimen/space_15"
                android:scaleType="fitXY"
                android:background="@color/lite_gray"/>

            <Button
                android:id="@+id/wt_login_btn_login1"
                style="@style/btn_text"
                android:background="@drawable/selector_btn_blue"
                android:text="@string/login_dialog_login_qq"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5.0dip"
                android:layout_marginLeft="1.0dip"
                android:layout_marginRight="1.0dip"
                android:layout_marginBottom="@dimen/space_5"
                android:scaleType="fitXY"
                android:background="@color/page_bg"/>

            <Button
                android:id="@+id/wt_login_btn_login2"
                style="@style/btn_text"
                android:background="@drawable/selector_btn_green"
                android:text="@string/login_dialog_login_wx"
                android:visibility="gone"/>



        </LinearLayout>
    </LinearLayout>

</LinearLayout>